--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ picture: assets/images/me.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: http://huangjundashuaige.me/
+resume-url: http://huangjundashuaige.me
 
-url: http://huangjundashuaige.me/
+url: http://huangjundashuaige.me
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
