--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ picture: assets/images/me.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
-resume-url: http://huangjundashuaige.me
+resume-external: false
+resume-url: assets/resume/resume.md
 
 url: http://huangjundashuaige.me
 # your url: http://USERNAME.github.io
